# agentguard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  policy.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agentguard/: __init__.py  async_client.py  audit.py  bus.py  callbacks.py  cli.py  client.py  control.py  events.py  openai_client.py  redaction.py  store.py
agentguard/engine/: __init__.py  _state.py  constraints.py  injection.py  policy.py  trust.py
agentguard/mcp/: __init__.py  client.py  interceptor.py  models.py  proxy.py  server.py
agentmoat/: __init__.py  async_client.py  audit.py  bus.py  callbacks.py  cli.py  client.py  control.py  events.py  openai_client.py  redaction.py  store.py
agentmoat/engine/: __init__.py  _state.py  constraints.py  injection.py  policy.py
agentmoat/mcp/: __init__.py  client.py  interceptor.py  models.py  proxy.py  server.py
api/: main.py
api/routes/: control.py  events.py  sessions.py
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  vite-env.d.ts
dashboard/src/components/: AlertBadge.tsx  EventFeed.tsx  SessionTimeline.tsx
docs/: demo_output.txt
examples/: async_openai_sdk_demo.py  async_sdk_demo.py  langgraph_demo.py  malicious_doc.txt  mcp_proxy_demo.py  openai_sdk_demo.py  sdk_demo.py
scripts/: make_demo_gif.py
tests/: test_api_auth.py  test_async_client.py  test_audit.py  test_audit_chain.py  test_bus_persistence.py  test_cli.py  test_cli_proxy_shutdown.py  test_client.py  test_constraints.py  test_control.py  test_fail_closed.py  test_injection.py  test_mcp_client.py  test_mcp_proxy.py  test_openai_client.py  test_policy.py  test_redaction.py  test_state_eviction.py  test_stderr_drain.py  test_trust.py
