[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmoat"
version = "0.1.0"
description = "Security observability layer for LangGraph and Anthropic SDK AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AgentMoat Contributors" }]
keywords = ["ai", "agents", "security", "observability", "langgraph", "anthropic", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0,<1.0",
    "pydantic>=2.7.0,<3.0",
    "PyYAML>=6.0.1,<7.0",
    "sqlalchemy>=2.0.35,<3.0",
    "aiosqlite>=0.20.0,<1.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "click>=8.1.0,<9.0",
    "httpx>=0.27.0,<1.0",
    "anyio>=4.0.0,<5.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-anthropic>=0.2.0,<1.0",
]
embeddings = [
    "sentence-transformers>=3.2.0,<4.0",
]
openai = [
    "openai>=1.0.0,<2.0",
]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "build",
]
all = [
    "agentmoat[langgraph,embeddings,openai,dev]",
]

[project.scripts]
agentmoat = "agentmoat.cli:cli"

[project.urls]
Homepage = "https://github.com/Shashank-016/agentmoat"
Repository = "https://github.com/Shashank-016/agentmoat"
Issues = "https://github.com/Shashank-016/agentmoat/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentmoat", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
